# sehundioelarca

./: Cargo.toml
src/: arca.rs  front.rs  main.rs
src/arca/: get_status.rs  mod.rs
templates/: index.tera  status_bead.tera  styles.css
